--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     header{display:flex;justify-content:space-between;align-items:center}
     nav a{color:var(--muted);text-decoration:none;margin-left:18px;font-size:14px}
     .hero{display:flex;gap:28px;align-items:center;margin-top:28px}
-    .avatar{width:132px;height:132px;border-radius:16px;background:linear-gradient(135deg,var(--accent),#60a5fa);display:flex;align-items:center;justify-content:center;font-weight:700}
+    .avatar{
+    width:132px;
+    height:132px;
+    border-radius:16px;
+    object-fit:cover;
+    object-position:center;
+    display:block;
+    margin:0 auto;
+    }
     h1{margin:0;font-size:28px}
     .muted{color:var(--muted)}
     .card{background:var(--card);padding:18px;border-radius:12px;margin-top:20px;box-shadow:0 6px 18px rgba(2,6,23,0.6)}
@@ -106,7 +114,6 @@
 
         <section class="card" style="margin-top:14px">
           <h4>Contact</h4>
-          <div class="muted">+91-6383331605</div>
           <div class="muted">Bengaluru, India</div>
           <div style="margin-top:8px"><a class="muted" href="https://www.linkedin.com/in/aradhanasubash/">LinkedIn</a> · <a class="muted" href="https://github.com/AradhanaS18">GitHub</a></div>
         </section>
