--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <section id="contact" class="card" style="margin-top:18px">
 <h2>Get in touch</h2>
-<p class="muted">Prefer email — I typically respond within a few days.</p>
+<p class="muted">I typically respond within a few days.</p>
 <form name="contact" method="POST" data-netlify="true" action="/thank-you.html">
   <input type="hidden" name="form-name" value="contact">
   
