--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
           <h2>Projects</h2>
           <ul class="projects">
             <li><strong>Employee Attrition Analysis</strong> — Exploratory data analysis, feature engineering, and churn pattern identification using HR dataset. Built a predictive classification model (Logistic Regression / Random Forest) to identify key drivers of attrition. Developed a Power BI dashboard highlighting risk segments, employee performance, salary bands, and actionable retention insights.</li>
+            <a href="https://github.com/AradhanaS18/HR-Attrition-Analysis" target="_blank">View Project</a>
             <li><strong>Walmart Sales Forecasting</strong> — Collected, cleaned, and normalized multi-store historical sales data. Performed EDA to understand seasonal trends, holiday impact, and regional performance variations. Built forecasting models (ARIMA/Prophet) to estimate weekly sales. Delivered insights on inventory planning, demand patterns, and store-level performance using Power BI visualizations.</li>
+            <a href="https://github.com/AradhanaS18/Walmart-Sales-Forecast" target="_blank">View Project</a>
           </ul>
         </section>
 
