--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
     /* small form styles */
     form input,form textarea{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:inherit;margin-top:8px}
     form button{margin-top:10px}
+    .project-link {
+      display: inline-block;
+      margin-top: 6px;
+      color: var(--accent);
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+.project-link:hover {
+  text-decoration: underline;
+}
+
   </style>
 </head>
 <body>
