--- a/index.html
+++ b/index.html
@@ -99,10 +99,8 @@
           <h2>Projects</h2>
           <ul class="projects">
             <li><strong>Employee Attrition Analysis</strong> — Exploratory data analysis, feature engineering, and churn pattern identification using HR dataset. Built a predictive classification model (Logistic Regression / Random Forest) to identify key drivers of attrition. Developed a Power BI dashboard highlighting risk segments, employee performance, salary bands, and actionable retention insights.
-            <br>
-            <a href="https://github.com/AradhanaS18/HR-Attrition-Analysis" target="_blank">View Project</a></li>
+            <a href="https://github.com/AradhanaS18/HR-Attrition-Analysis" target="_blank">View Project</a></li><br>
             <li><strong>Walmart Sales Forecasting</strong> — Collected, cleaned, and normalized multi-store historical sales data. Performed EDA to understand seasonal trends, holiday impact, and regional performance variations. Built forecasting models (ARIMA/Prophet) to estimate weekly sales. Delivered insights on inventory planning, demand patterns, and store-level performance using Power BI visualizations.
-            <br>  
             <a href="https://github.com/AradhanaS18/Walmart-Sales-Forecast" target="_blank">View Project</a></li>li>
           </ul>
         </section>
