--- a/index.html
+++ b/index.html
@@ -125,6 +125,18 @@
           </ul>
         </section>
 
+        <section class="card">
+        <h2>Experience</h2>
+        <p><strong>Mobile App Development Intern — Accent Techno Soft</strong> (Jul 2023 – Aug 2023)</p>
+        <p class="muted">Short-term internship focused on building functional app features and collaborating with developers.</p>
+        <ul>
+        <li>Developed core modules for a Women’s Safety App using Flutter & Dart.</li>
+        <li>Implemented secure real-time location tracking using Geolocator.</li>
+        <li>Built and tested SOS emergency alert functionality.</li>
+        <li>Improved UI flows and app performance through structured debugging.</li>
+        </ul>
+        </section>
+
         <section id="education" class="card" style="margin-top:14px">
           <h2>Education</h2>
           <p><strong>MCA</strong> — KIT - Kalaignarkarunanidhi Institute of Technology (2024)</p>
