--- a/index.html
+++ b/index.html
@@ -192,8 +192,7 @@
 </section>
 
     <footer>
-      <div>Designed by Aradhana S</div>
-      <div class="muted">Built with HTML • CSS • JavaScript • Hosted on GitHub Pages</div>
+      <div class="muted">© 2025 Aradhana S</div>
     </footer>
 
   </div>
