--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
 
         <section class="card">
         <h2>Experience</h2>
-        <p><strong>Mobile App Development Intern — Accent Techno Soft</strong> (Jul 2023 – Aug 2023)</p>
-        <p class="muted">Short-term internship focused on building functional app features and collaborating with developers.</p>
+        <p><strong>Trainee Program Analyst - Mirafra Technologies</strong> (Jul 2023 – Aug 2023)</p>
+        <p class="muted">Entry-level trainee role; currently in onboarding and training phase.</p>
         <ul>
-        <li>Developed core modules for a Women’s Safety App using Flutter & Dart.</li>
-        <li>Implemented secure real-time location tracking using Geolocator.</li>
-        <li>Built and tested SOS emergency alert functionality.</li>
-        <li>Improved UI flows and app performance through structured debugging.</li>
+        <li>Undergoing onboarding and role-specific training as a Program Analyst.</li>
+        <li>Getting trained on Excel-based reporting and basic Power BI dashboards.</li>
+        <li>Learning program reporting, data tracking, and documentation processes.</li>
+        <li>Understanding KPI tracking and structured analysis workflows.</li>
         </ul>
         </section>
 
