--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <section class="card">
         <h2>Experience</h2>
-        <p><strong>Trainee Program Analyst - Mirafra Technologies</strong> (Jul 2023 – Aug 2023)</p>
+        <p><strong>Trainee Program Analyst - Mirafra Technologies</strong> (Dec 2025 – Present)</p>
         <p class="muted">Entry-level trainee role; currently in onboarding and training phase.</p>
         <ul>
         <li>Undergoing onboarding and role-specific training as a Program Analyst.</li>
