--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <div class="card" style="margin-top:14px">
           <strong>Quick info</strong>
-          <div class="muted" style="margin-top:8px">Experience: Fresher · Looking for Data Analyst roles</div>
+          <div class="muted" style="margin-top:8px">Experience: Trainee Program Analyst · Mirafra Technologies</div>
           <div class="muted" style="margin-top:6px">Certifications: Azure Data Fundamentals, SQL, Full Stack Web Development</div>
         </div>
       </div>
